# neural_network

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  main.cpp  neural_net.cpp
examples/: Ex1_SimpleNet.cpp  Ex2_LoadingAndSaving.cpp  Ex3_CloneAndConnectNets.cpp  Ex4_DynamicConstruction.cpp  README  SimpleNet.cpp
header/: link.h  net.h  neuron.h
include/: data_operations.h  file_manager.h  fully_connected_net.h  link.h  lstm_block.h  net.h  neuron.h  vocabulary.h
python/: .gitignore  pyInterface.cpp
src/: data_operations.cpp  file_manager.cpp  fully_connected_net.cpp  link.cpp  lstm_block.cpp  net.cpp  neuron.cpp  vocabulary.cpp
